--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,7 @@
-absl-py==2.1.0
-altair==5.0.1
-astor==0.8.1
-attrs==24.2.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-blinker==1.6.3
-cachetools==5.5.2
-certifi==2025.11.12
-charset-normalizer==3.4.4
-click==8.1.8
-colorama==0.4.6
-cycler==0.11.0
-decorator==5.1.1
-filterpy==1.4.5
-fonttools==4.38.0
-gast==0.7.0
-gitdb==4.0.12
-GitPython==3.1.45
-grpcio==1.62.3
-h5py==2.10.0
-idna==3.10
-imageio==2.31.2
-imgaug==0.2.6
-importlib-metadata==6.7.0
-importlib-resources==5.12.0
-imutils==0.5.4
-ipython==7.16.3
-jedi==0.17.2
-Jinja2==3.1.6
-joblib==1.3.2
-jsonschema==4.17.3
-Keras==2.1.6
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-Markdown==3.4.4
-markdown-it-py==2.2.0
-MarkupSafe==2.1.5
-matplotlib==3.1.3
-mdurl==0.1.2
-mock==5.2.0
-networkx==2.6.3
-numpy==1.21.6
-opencv-python==4.12.0.88
-packaging==23.2
-pandas==1.3.5
-parso==0.7.1
-pickleshare==0.7.5
-Pillow==9.5.0
-pkgutil_resolve_name==1.3.10
-prompt_toolkit==3.0.48
-protobuf==3.20.3
-pyarrow==12.0.1
-pydeck==0.8.1b1
-Pygments==2.17.2
-Pympler==1.1
-pyparsing==3.1.4
-pyrsistent==0.19.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.3.0
-pywin32==308
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.8.1
-scikit-image==0.19.3
-scikit-learn==0.22.2
-scipy==1.7.3
-six==1.17.0
-smmap==5.0.2
-streamlit==1.23.1
-tenacity==8.2.3
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.0
-termcolor==2.3.0
-tifffile==2021.11.2
-toml==0.10.2
-toolz==0.12.1
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.7.1
-tzdata==2025.3
-tzlocal==4.3.1
-urllib3==2.0.7
-validators==0.20.0
-watchdog==3.0.0
-wcwidth==0.2.14
-Werkzeug==2.2.3
-zipp==3.15.0
+streamlit
+numpy
+opencv-python-headless
+pillow
+matplotlib
+imutils
+scikit-learn
